:imp: Implementação das Visões da Empresa
Nesta atualização eu implemento as visões da empresa assim como também, crio o sistema de inversão de controle para com o data set provider.

--- a/bin/conf.ini
+++ b/bin/conf.ini
@@ -17,41 +17,10 @@
 [ FIREBIRD ]
 PROTOCOL=1
 HOST=127.0.0.1
-DATABASE=
+DATABASE=C:\Cadfornecedores\Cadastro-de-fornecedor-Delphi\bin\DATA.FDB
 PORT=3050
 USERNAME=sysdba
 PASSWORD=1234
 DRIVERID=FB
 VENDORHOME=fbclient.dll
-VENDORLIB=
-
-[ POSTGRES ]
-PROTOCOL=1
-HOST=127.0.0.1
-DATABASE=
-PORT=3050
-USERNAME=sysdba
-PASSWORD=1234
-DRIVERID=FB
-VENDORHOME=fbclient.dll
-VENDORLIB=
-
-[ ORACLE ]
-PROTOCOL=1
-HOST=127.0.0.1
-DATABASE=
-PORT=3050
-USERNAME=sysdba
-PASSWORD=1234
-DRIVERID=FB
-VENDORHOME=fbclient.dll
-VENDORLIB=
-
-[ACTIVE DATABASE]
-database_name: FIREBIRD
-
-
-
-
-
-    
+VENDORLIB=C:\Cadfornecedores\Cadastro-de-fornecedor-Delphi\bin\bin
